--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -18,10 +18,11 @@
 
 
 
-\section*{Publications}
+\section*{Selected Publications}
 
 \begin{itemize}
-\item \textit{Proof Relevant Corecursive Resolution}. Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond. International Symposium on Functional and Logic Programming, FLOPS 2016. [Extended Version]
+\item \textit{Proof Relevant Corecursive Resolution}. Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond. International Symposium on Functional and Logic Programming, FLOPS 2016. 
+  [\href{../../document/papers/corec.pdf}{Extended Version}]
 \item \textit{A Type-Theoretic Approach to Resolution}. Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, LOPSTR 2015. [\href{../../document/papers/tm-lp.pdf}{Extended Version}]
 
 \item \textit{Lambda encodings in type theory}. Dissertation, May 2014. [\href{../../document/papers/dissertation.pdf}{pdf}]
