--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -21,6 +21,9 @@
 \section*{Selected Publications}
 
 \begin{itemize}
+\item \textit{Efficiency of Lambda-Encodings in Total Type Theory}. Aaron Stump, Peng Fu. Accepted in final form January 23, 2016 by the Journal of Functional Programming. To appear.
+  [\href{../../document/papers/efficiency.pdf}{pdf}]
+  
 \item \textit{Proof Relevant Corecursive Resolution}. Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond. International Symposium on Functional and Logic Programming, FLOPS 2016. 
   [\href{../../document/papers/corec.pdf}{Extended Version}]
 \item \textit{A Type-Theoretic Approach to Resolution}. Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, LOPSTR 2015. [\href{../../document/papers/tm-lp.pdf}{Extended Version}]
