--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -73,7 +73,8 @@
 
 \item A004: Dependently-typed Programming with Scott Encoding. Peng Fu, Aaron Stump. 2013. [\href{../../document/papers/scott-dep.pdf}{pdf}]
 
-
+\section*{Academic Blog}
+I try to maintain an academic blog here: \url{https://steprow.wordpress.com/}. 
 \end{itemize}
 
 \end{document}
