--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -21,7 +21,10 @@
 \section*{Selected Publications}
 
 \begin{itemize}
-\item \textit{Efficiency of Lambda-Encodings in Total Type Theory}. Aaron Stump, Peng Fu. Accepted in final form January 23, 2016 by the Journal of Functional Programming. To appear.
+\item \textit{Operational semantics of resolution and productivity in Horn clause logic}. Peng Fu, Ekaterina Komendantskaya. Formal Aspects of Computing, extended version of LOPSTR 2015, to appear.
+  [\href{../../document/papers/fac-journal.pdf}{pdf}]
+  
+\item \textit{Efficiency of Lambda-Encodings in Total Type Theory}. Aaron Stump, Peng Fu. Journal of Functional Programming, 2016.
   [\href{../../document/papers/efficiency.pdf}{pdf}]
   
 \item \textit{Proof Relevant Corecursive Resolution}. Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond. International Symposium on Functional and Logic Programming, FLOPS 2016. 
