--- a/src/cv/cv.tex
+++ b/src/cv/cv.tex
@@ -5,7 +5,7 @@
 \usepackage{comment}
 \begin{document}
 \begin{center}
-{\Large{\bfseries Peng Fu}}
+{\Large{\bfseries Frank Fu}}
 
 \
 
@@ -34,15 +34,21 @@ Homepage: \url{https://fermat.github.io/}
 %% \end{center}
 %% \vspace{20pt}
 
-\section*{Education}
+\subsection*{Education}
 
 \begin{itemize}
-\item Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. August 2014. 
-  \item B.Eng. School of Computer Science, Huazhong University of Science and Technology, China. July~2009. %Accumulated grade: 84.6/100.
+\item Ph.D. Department of Computer Science, the University of Iowa, Iowa City, Iowa, USA. August 2009 - August 2014. Major: Computer Science
+  \item B.Eng. School of Computer Science, Huazhong University of Science and Technology, Wuhan, Hubei, China. September 2005 - July 2009. Major: Information Security %Accumulated grade: 84.6/100.
 \end{itemize}
 
+\subsection*{Academic Positions}
 
-\section*{Research Interests}
+\begin{itemize}
+\item Postdoctoral Research Assistant, Heriot-Watt University, Edinburgh, UK. March 2016 - August 2016. Principal Investigator: Ekaterina Komendantskaya
+\item Postdoctoral Research Assistant, University of Dundee, Dundee, UK. October 2014 - March 2016. Principal Investigator: Ekaterina Komendantskaya
+\end{itemize}
+
+\subsection*{Research Interests}
 \begin{itemize}
 \item Lambda calculus, type theory and their applications.
 \item Theorem proving and language-based verification. 
@@ -50,7 +56,7 @@ Homepage: \url{https://fermat.github.io/}
   
 \end{itemize}
 
-\section*{Conference Publications}
+\subsection*{Conference Publications}
 
 \begin{enumerate}
 
@@ -65,16 +71,31 @@ Homepage: \url{https://fermat.github.io/}
     \textbf{Peng Fu}, Aaron Stump. Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, RTA-TLCA 2014. 
 \end{enumerate}
 
-\section*{Journal and Workshop Publications}
+\subsection*{Journal Publication}
 
+
+  
 \begin{enumerate}
-%% \item \textbf{Operational Semantics of Resolution in Horn Clause Logic}. 
+  \item \textbf{Operational Semantics of Resolution and Productivity in Horn Clause Logic}. 
   
-%%   \textbf{Peng Fu}, Ekaterina Komendantskaya. Formal Aspect of Computing, 2016. Journal Version of C2. 
-  
+  \textbf{Peng Fu}, Ekaterina Komendantskaya. Formal Aspect of Computing, Journal Version of LOPSTR 2015, to appear. 
+
 \item \textbf{Efficiency of Lambda-Encodings in Total Type Theory}. 
   
   Aaron Stump, \textbf{Peng Fu}.  Journal of Functional Programming, 2016.
+\end{enumerate}
+
+
+\subsection*{Workshop Publications}
+\begin{enumerate}
+  \item { \textbf{Equational Reasoning about Programs with General Recursion and Call-by-value Semantics}}. 
+  
+  Garrin Kimmell, Aaron Stump, Harley Eades III, \textbf{Peng Fu}, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Programming Languages meets Program Verification, PLPV 2012. 
+\item { \textbf{Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems}. }
+  
+  Vilhelm Sjoberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley Eades III, \textbf{Peng Fu}, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich.  Mathematically Structured Functional
+Programming, MSFP 2012.
+
 
   \item \textbf{A Framework for Internalizing Relations into Type Theory}. 
 
@@ -82,6 +103,7 @@ Homepage: \url{https://fermat.github.io/}
 
 \end{enumerate}  
 
+  
 %% \section*{Current Works}
 %% \begin{itemize}
   
@@ -90,7 +112,7 @@ Homepage: \url{https://fermat.github.io/}
 %%   Peng Fu, Ekaterina Komendantskaya. In submission.
 %% \end{itemize}
 
-\section*{Dissertation}
+\subsection*{Dissertation}
 \begin{itemize}
 \item Title: \textbf{Lambda Encodings in Type Theory}.  
 
@@ -101,6 +123,41 @@ Homepage: \url{https://fermat.github.io/}
      
 \end{itemize}
 
+\subsection*{Teaching Experiences}
+
+\begin{itemize}
+%%  \item Postdoctoral Research Assistant, Heriot-Watt University, UK. March 2016 -- August 2016.
+%% \item Postdoctoral Research Assistant, University of Dundee, UK. October 2014 -- March 2016.
+
+\item Teaching Assistant,  \textit{Algorithm and AI}, 2015 Spring.  Computer Science, The University of Dundee.
+  \begin{itemize}
+  \item Taught basic functional programming in Haskell, the first Haskell class taught in University of Dundee. 
+  \item Delivered one lecture per week (total 13 lectures, class size: around 50). 
+  \item Ran one lab session per week.  
+  \item Developed class materials, homeworks and part of the final exam.  
+  \end{itemize}
+  
+\item Graduate Teaching Assistant,  \textit{Programming Language Concepts}, 2013 Spring, 2014 Spring. Department of Computer Science, The University of Iowa.
+  \begin{itemize}
+  \item Graded assignments (Class size: around 70 both times).
+  \item Ran weekly office hours. 
+  \end{itemize}
+  
+\item Graduate Teaching Assistant,  \textit{Object-Oriented Software Development}, 2013 Fall. Department of Computer Science, The University of Iowa.
+    \begin{itemize}
+  \item Graded assignments (Class size: around 70).  
+   \item Ran one lab session per week.  
+  \item Ran weekly office hours. 
+  \end{itemize}
+
+%% \item Research Assistant, 2010 spring - 2013 spring, TRELLYS project. Supervisor: Prof. Aaron Stump.
+  \item Graduate Teaching Assistant, \textit{Computer Networking}, 2009 Fall. Department of Computer Science, The University of Iowa.
+      \begin{itemize}
+  \item Graded assignments (Class size: around 30).
+  \item Ran weekly office hours. 
+    \end{itemize}
+
+\end{itemize}
 
 \section*{Research Projects}
 \begin{itemize}
@@ -137,42 +194,21 @@ Homepage: \url{https://fermat.github.io/}
 
 \end{itemize}
 
-\section*{Academic Positions}
+\subsection*{Conferences and Workshops Presentations}
+
 
 \begin{itemize}
- \item Postdoctoral Research Assistant, Heriot-Watt University, UK. March 2016 -- August 2016.
-\item Postdoctoral Research Assistant, University of Dundee, UK. October 2014 -- March 2016.
+\item \textbf{Proof Relevant Corecursive Resolution}. June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK.
 
-\item Teaching Assistant,  ``Algorithm and AI'', 2015 Spring.  Computer Science, The University of Dundee.
-  \begin{itemize}
-  \item Taught basic functional programming in Haskell, the first Haskell class taught in University of Dundee. 
-  \item Delivered one lecture per week (total 13 lectures, class size: around 50). 
-  \item Ran one lab session per week.  
-  \item Developed class materials, homeworks and part of the final exam.  
-  \end{itemize}
-  
-\item Graduate Teaching Assistant,  ``Programming Language Concepts'', 2013 Spring, 2014 Spring. Department of Computer Science, The University of Iowa.
-  \begin{itemize}
-  \item Graded assignments (Class size: around 70 both times).
-  \item Ran weekly office hours. 
-  \end{itemize}
-  
-\item Graduate Teaching Assistant,  ``Object-Oriented Software Development '', 2013 Fall. Department of Computer Science, The University of Iowa.
-    \begin{itemize}
-  \item Graded assignments (Class size: around 70).  
-   \item Ran one lab session per week.  
-  \item Ran weekly office hours. 
-  \end{itemize}
+\item \textbf{A Type-Theoretic Approach to Structural Resolution}. July 13, 2015, LOPSTR, Siena, Italy. 
 
-%% \item Research Assistant, 2010 spring - 2013 spring, TRELLYS project. Supervisor: Prof. Aaron Stump.
-  \item Graduate Teaching Assistant, ``Computer Networking'', 2009 Fall. Department of Computer Science, The University of Iowa.
-      \begin{itemize}
-  \item Graded assignments (Class size: around 30).
-  \item Ran weekly office hours. 
-    \end{itemize}
+\item \textbf{Self Types for Dependently Typed Lambda Encodings}. July 15, 2014, RTA-TLCA, Vienna, Austria. 
 
+\item \textbf{Dependent Lambda Encoding with Self Types}. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. 
+
+\item \textbf{A Framework for Internalizing Relations into Type Theory}. August 2011, PSATTT workshop, Wroclaw. Poland. 
 \end{itemize}
-\section*{Professional Service}
+\subsection*{Professional Service}
 \begin{itemize}
 \item External Reviewer. 24th International Conference on Rewriting
 Techniques and Applications (RTA 2013). Reviewed: 1 paper.
@@ -181,48 +217,6 @@ Techniques and Applications (RTA 2013). Reviewed: 1 paper.
   of Software Science and Computation Structures (FoSSaCS 2016). Reviewed: 1 paper.
 
 \item External Reviewer. 32nd International Conference on Logic Programming (ICLP 2016). Reviewed: 1 paper.
-
-
 \end{itemize}
-
-%% \section*{References}
-
-%% \begin{itemize}
-%% \item Aaron Stump, Advisor.
-  
-%% Professor, Department of Computer Science.
-
-%% University of Iowa. 
-
-%% aaron-stump@uiowa.edu
-
-%% \item Ekaterina Komendantskaya.                 
-
-%%   Associate Professor, School of Mathematical and Computer Sciences.
-
-%%   Heriot-Watt University.  
-  
-%%   komendantskaya@gmail.com
-  
-  
-%\end{itemize}
-% \section*{Additional Skills}
-% Haskell (intermediate, since 2012), C (intermediate, since 2006), Java (intermediate, since 2007). 
-%
-%% \section*{References\footnote{Letters are available upon request.}}
-%% \begin{itemize}
-%% \item Professor Aaron Stump(advisor), Computer Science, University of Iowa. 
-%% \item Professor Cesare Tinelli, Computer Science, University of Iowa. 
-%% \item Professor Tim Sheard, Computer Science, Portland State University. 
-%% \end{itemize}
-
-% \section*{Selected Talks}
-
-%% \begin{itemize}
-%% \item ``Dependent Lambda Encoding with Self Types''. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA.
-%% %% \item ``Dependent Lambda Encoding with Self Types''. September 2012, Midwest Verification Days, Lawrence, KS.
-%% \item ``A Framework for Internalizing Relations into Type Theory''. August 2011, PSATTT workshop, Wroclaw. Poland. 
-
-%% \end{itemize}
 
 \end{document}
