--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -21,7 +21,7 @@
 \section*{Selected Publications}
 
 \begin{itemize}
-\item \textit{Operational semantics of resolution and productivity in Horn clause logic}. Peng Fu, Ekaterina Komendantskaya. Formal Aspects of Computing, extended version of LOPSTR 2015, to appear.
+\item \textit{Operational semantics of resolution and productivity in Horn clause logic}. Peng Fu, Ekaterina Komendantskaya. Formal Aspects of Computing, journal version of LOPSTR 2015, to appear.
   [\href{../../document/papers/fac-journal.pdf}{pdf}]
   
 \item \textit{Efficiency of Lambda-Encodings in Total Type Theory}. Aaron Stump, Peng Fu. Journal of Functional Programming, 2016.
