add new notes and articles

--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -46,6 +46,10 @@
 
 \noindent \textbf{Remarks}: This note shows how one can have a notion of \textit{logic programming} based solely on term matching. 
 
+\item N011: Realizability at work,  June, 2017. [\href{../../document/notes/realization.pdf}{pdf}]
+
+  \noindent \textbf{Remarks}: This notes shows examples of realization by termination and realization by shape index. 
+
 
   
 \end{itemize}
@@ -72,6 +76,8 @@
 
 
 \item A004: Dependently-typed Programming with Scott Encoding. Peng Fu, Aaron Stump. 2013. [\href{../../document/papers/scott-dep.pdf}{pdf}]
+ 
+\item A005: Representing Nonterminating Reductions in F-mu-2. Peng Fu, 2016-2017. [\href{../../document/papers/nonterm.pdf}{pdf}]
 
 \end{itemize}
 \section*{Academic Blog}
