remove a note as it is actually incorrect

--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -50,9 +50,9 @@
 
   \noindent \textbf{Remarks}: This notes shows examples of realization by termination and realization by shape index. 
 
-\item N012: Shape Realization,  August, 2017. [\href{../../document/notes/shape-real.pdf}{pdf}]
+%% \item N012: Shape Realization,  August, 2017. [\href{../../document/notes/shape-real.pdf}{pdf}]
 
-  \noindent \textbf{Remarks}: This notes shows how to obtain a shape indexed version of a linear language. 
+%%   \noindent \textbf{Remarks}: This notes shows how to obtain a shape indexed version of a linear language. 
   
 
   
