--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -53,7 +53,7 @@
 \item N012: Shape Realization,  August, 2017. [\href{../../document/notes/shape-real.pdf}{pdf}]
 
   \noindent \textbf{Remarks}: This notes shows how to obtain a shape indexed version of a linear language. However, it suffers from an error due to the definition of shape on term. More specifically, the variable case for Theorem 5 does not hold. A more specialized version of shape will
-  have to define for Theorem 5. 
+  have to define for Theorem 5. This error was pointed out by Peter Selinger.
   
 
   
