--- a/src/talks/talks.tex
+++ b/src/talks/talks.tex
@@ -11,6 +11,9 @@
 \vspace{20pt}
 \section*{Talks}
 \begin{itemize}
+
+\item \textit{Encoding Data in Lambda Calculus: An Introduction.}. September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada. [\href{../../document/talks/lam.pdf}{Slides}]
+  
 \item \textit{Proof Relevant Corecursive Resolution}. June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [\href{../../document/talks/spls-2016.pdf}{Slides}]
 
 \item \textit{A Type-Theoretic Approach to Structural Resolution}. July 13, 2015, LOPSTR, Siena, Italy. [\href{../../document/talks/lopstr-2015.pdf}{Slides}]
